@startuml
class Player1 {
+ String makeGuess()
+ Feedback checkGuess(String)
+ List generateSecret()
~ boolean isValidGuess(String)
}
class ComputerPlayer {
- SecretNumber secretNumber
+ String makeGuess()
+ Feedback checkGuess(String)
+ List generateSecret()
}
abstract class Player {
+ SecretNumber secretNumber
+ {abstract}String makeGuess()
+ {abstract}Feedback checkGuess(String)
+ {abstract}List generateSecret()
+ void feedback(String,Feedback)
}
class SecretNumber {
- List<Integer> secretCode
+ List<Integer> generateSecret()
+ List<Integer> generateSecret(String)
+ Feedback checkGuess(String)
+ List<Integer> getSecretCode()
}
class Feedback {
- int bulls
- int cows
+ int getBulls()
+ int getCows()
+ void incrementBulls()
+ void incrementCows()
}
class Main {
+ {static} void main(String[])
}
class Keyboard {
- {static} Scanner in
- {static} boolean redirected
+ {static} String readInput()
}
class FilePlayer {
- List<String> fileGuesses
- List<String> readGuessesFromFile(String)
- String selectFilename()
+ String makeGuess()
+ Feedback checkGuess(String)
+ List generateSecret()
}
class HardComputerPlayer {
- SecretNumber secretNumber
- List<String> possibleGuesses
- List<String> generateAllPossibleCodes()
+ String makeGuess()
- String getRandomGuess()
+ void feedback(String,Feedback)
+ Feedback checkGuess(String)
+ List generateSecret()
}
class Game {
- Player player1
- Player computerPlayer
- int playerAttempts
- int computerAttempts
- List<String> computerGuessStringList
- List<String> playerGuessStringList
- List playerSecretCode
- List computerSecretCode
- int result
+ void startGame()
- int selectManualOrFile()
- int selectAIDifficulty()
- void playGame()
- void saveResultToFile()
- String toString(List)
}
class MediumComputerPlayer {
- SecretNumber secretNumber
- Set<String> previousGuesses
+ String makeGuess()
+ Feedback checkGuess(String)
+ List generateSecret()
}


Player <|-- Player1
Player <|-- ComputerPlayer
Player <|-- FilePlayer
Player <|-- HardComputerPlayer
Player <|-- MediumComputerPlayer
@enduml